                                   --------
                                Release Notes


 Development version
 -------------------

Emulation:
- IDE improvements:
  - Support for second drive (IDE slave)
  - WIN_FORMAT command (allows HD Driver to format IDE drives)
- GEMDOS HDD emulation:
  - Minor fixes to Fseek(), Fopen(), Fdatime() (e.g. Pure debugger works)
  - Prevent DTA and read/write functions accessing invalid memory areas
  - Programs can now change read-only files to be writable
- Microphone (jack) emulation in Falcon mode (requires portaudio library)
- SSI direct sound entrance ("Audio Fun Machine" and winrec are working)
- DMA sound recording
- Crossbar handshake mode transfers
- Max VDI rez increased to TT-hi size (1280x960)
- 68020+FPU changed to 68EC030+FPU (no MMU 030) for Falcon and TT modes
  (Some Falcon programs didn't work with 020)

Emulator:
- Host mouse is centered to Hatari window on Falcon resolution changes
  (helps in synchronizing host and emulated mouse positions)
- Option for preventing GEMDOS HDD emulation file modifications
  ("--mount-changes no")
- AVI file recording:
  - video can be stored as BMP or as PNG images
  - audio is stored as 16 bits stereo PCM.
- Statusbar shows CPU type & speed
- Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
  from the GUI in addition to DD & SD images
- Debugger improvements:
  - "trace" command for tracing what the emulated code does
  - GEMDOS tracing gives slightly more information
  - "evaluate" command for doing calculations
  - "info" command for showing Atari HW and OS information
  - "symbols" command for loading and listing CPU & DSP code
    symbols/addresses and breaking on them.  Symbols are shown
    on CPU disassembly
  - debugger command and command argument TAB-completion support
    (requires readline library)
  - improved register name handling + fixed DSP reg name matching
  - CPU breakpoints can be given an optional count of how many hits